# cratefill

./: .gitattributes  .gitignore  CLAUDE.md  README.md  RESEARCH.md  _screenshot_preview.py  cratefill.py  implementation-notes.md  pyproject.toml  requirements.txt  sample.csv
.github/workflows/: publish.yml
